--- a/networking/Cisco/cisco827_htm/cisco827_acl_est.html
+++ b/networking/Cisco/cisco827_htm/cisco827_acl_est.html
@@ -3,8 +3,8 @@
 <!-- Mirrored from www.di-srv.unisa.it/~ads/corso-security/www/CORSO-0203/Cisco/cisco827_htm/cisco827_acl_est.htm by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 08 Oct 2019 08:59:36 GMT -->
 <head>
 <title>Access List estese</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-</head>
+ <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+ </head>
 
 <body bgcolor="#FFFFFF" text="#000000" background="../sfondo.jpg">
 <h1 align="left"><font face="Verdana, Arial, Helvetica, sans-serif"><em>ACCESS 
@@ -50,26 +50,26 @@
     <TR> 
       <TD class=Normal vAlign=top width=163> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Access-list-number</font></P></TD>
       <TD class=Normal vAlign=top width=489> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Numero 
-          dell’ACL. Ne indica il nome e il tipo (es. da 100 a 199 e da 2000 a 
-          2699 per le ACL IP Estese). E’ importante ricordare che le ACL estese 
+          dellâ€™ACL. Ne indica il nome e il tipo (es. da 100 a 199 e da 2000 a 
+          2699 per le ACL IP Estese). Eâ€™ importante ricordare che le ACL estese 
           utilizzano <I>access-list number </I>differenti da quelli utilizzati 
           dalle standard, anche se riferiti allo stesso protocollo.</font></P></TD>
     </TR>
     <TR> 
       <TD class=Normal vAlign=top width=163> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Permit</font></P></TD>
       <TD class=Normal vAlign=top width=489> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Permette 
-          l’accesso se le condizioni sono soddisfatte</font></P></TD>
+          lâ€™accesso se le condizioni sono soddisfatte</font></P></TD>
     </TR>
     <TR> 
       <TD class=Normal vAlign=top width=163> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Deny</font></P></TD>
       <TD class=Normal vAlign=top width=489> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Nega 
-          l’accesso se le condizioni sono soddisfatte</font></P></TD>
+          lâ€™accesso se le condizioni sono soddisfatte</font></P></TD>
     </TR>
     <TR> 
       <TD class=Normal vAlign=top width=163> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Protocol 
           </font></P></TD>
       <TD class=Normal vAlign=top width=489> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Il 
-          protocollo di comunicazione; es. IP, TCP, UDP, ICMP, IGRP, …</font></P></TD>
+          protocollo di comunicazione; es. IP, TCP, UDP, ICMP, IGRP, â€¦</font></P></TD>
     </TR>
     <TR> 
       <TD class=Normal vAlign=top width=163> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Source 
@@ -81,7 +81,7 @@
       <TD class=Normal vAlign=top width=163> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Souce-wildcard 
           e Destination-wildcard</font></P></TD>
       <TD class=Normal vAlign=top width=489> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">La 
-          wildcard mask che deve essere applicata all’indirizzo sorgente e a quello 
+          wildcard mask che deve essere applicata allâ€™indirizzo sorgente e a quello 
           di destinazione.</font></P></TD>
     </TR>
     <TR> 
@@ -90,13 +90,13 @@
       <TD class=Normal vAlign=top width=489> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Un 
           operatore logico: lt, gt, eq, neq, range (less than, greater than, equal, 
           not equal, range) e il numero o il nome della porta TCP o UDP (vedi 
-          Tabella n.1). Nel caso dell’operatore <I>range </I>occorre inserire 
+          Tabella n.1). Nel caso dellâ€™operatore <I>range </I>occorre inserire 
           due valori <I>operand </I>(es. range 21 25)</font></P></TD>
     </TR>
     <TR> 
       <TD class=Normal vAlign=top width=163> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Established</font></P></TD>
       <TD class=Normal vAlign=top width=489> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">(Optional) 
-          Si utilizza solo con il protocollo TCP: indica una “estabilished connection”. 
+          Si utilizza solo con il protocollo TCP: indica una â€œestabilished connectionâ€. 
           Il controllo viene effettuato solo se il datagramma ha settato il bit 
           di ACK o RST, mentre non ci sono controlli sul pacchetto iniziale per 
           stabilire la connessione.</font></P></TD>
@@ -110,15 +110,15 @@
     <TR> 
       <TD class=Normal vAlign=top width=163> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Log</font></P></TD>
       <TD class=Normal vAlign=top width=489> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">(Optional) 
-          Attiva i messaggi di log. Questi comprendono l’indirizzo sorgente, il 
-          numero di pacchetti e l’esito del controllo (permit o deny). I log vengono 
+          Attiva i messaggi di log. Questi comprendono lâ€™indirizzo sorgente, il 
+          numero di pacchetti e lâ€™esito del controllo (permit o deny). I log vengono 
           generati a intervalli di 5 minuti.</font></P></TD>
     </TR>
   </TBODY>
 </TABLE>
 <ol>
   <li value="2"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Applicare 
-    l’ACL a una o più interfacce: </font></li>
+    lâ€™ACL a una o piÃ¹ interfacce: </font></li>
 </ol>
 <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Router(config-if)# 
   <B>ip access-group</B> <I>access-list number </I>{<B>in</B>|<B>out</B>}</font></P>
@@ -132,27 +132,27 @@
     <TR> 
       <TD class=Normal vAlign=top width=139> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Access-list-number</font></P></TD>
       <TD class=Normal vAlign=top width=513> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Indica 
-          il numero della ACL che deve essere legata all’interfaccia.</font></P></TD>
+          il numero della ACL che deve essere legata allâ€™interfaccia.</font></P></TD>
     </TR>
     <TR> 
       <TD class=Normal vAlign=top width=139> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">In|out</font></P></TD>
       <TD class=Normal vAlign=top width=513> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Specifica 
-          se la ACL va applicata all’interfaccia in entrata o in uscita. Un’ACL 
-          in input fa sì che il router applichi prima l’ACL e poi effettui il 
-          routing, mentre in output prima il routing e poi l’ACL. Se non è specificato, 
-          per default è out.</font></P></TD>
+          se la ACL va applicata allâ€™interfaccia in entrata o in uscita. Unâ€™ACL 
+          in input fa sÃ¬ che il router applichi prima lâ€™ACL e poi effettui il 
+          routing, mentre in output prima il routing e poi lâ€™ACL. Se non Ã¨ specificato, 
+          per default Ã¨ out.</font></P></TD>
     </TR>
   </TBODY>
 </TABLE>
 <P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif"><U>Nota</U>: 
-  &nbsp;&nbsp; Per cancellare un ACL o rimuoverla da un’interfaccia del Router 
+  &nbsp;&nbsp; Per cancellare un ACL o rimuoverla da unâ€™interfaccia del Router 
   occorre utilizzare &nbsp;rispettivamente i seguenti comandi:</font></P>
 <P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Router(config)# 
   <B>no access-list</B> <I>access-list number</I></font></P>
 <P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Router(config-if)# 
   <B>no</B> <B>ip access-group</B> <I>access-list number</I></font></P>
-<P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">E’ 
-  consigliabile, prima di cancellare un’ACL, rimuoverla da tutte le interfacce.</font></P>
+<P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Eâ€™ 
+  consigliabile, prima di cancellare unâ€™ACL, rimuoverla da tutte le interfacce.</font></P>
 <TABLE align="center" bgcolor="#CCCCCC">
   <TBODY>
     <TR> 
@@ -236,18 +236,18 @@
 <P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif"><strong><em>access-list 
   101 deny tcp 172.16.4.0 0.0.0.255 172.16.3.0 0.0.0.255 eq 21<BR>
   access-list 101 permit ip 172.16.4.0 0.0.0.255 any</em></strong><BR>
-  (access-list 101 deny any any – implicito, non visibile nella lista)</font></P>
+  (access-list 101 deny any any â€“ implicito, non visibile nella lista)</font></P>
 <P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif"><strong><em>interface 
   ethernet 0<BR>
   ip access-group 101</em></strong></font></P>
 <P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif"><U><strong>Esempio 
-  n. 2</strong></U>: permettere esclusivamente l’invio di E-mail</font></P>
+  n. 2</strong></U>: permettere esclusivamente lâ€™invio di E-mail</font></P>
 <P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">In 
-  questo esempio viene bloccato sull’interfaccia E0 tutto il traffico a esclusione 
+  questo esempio viene bloccato sullâ€™interfaccia E0 tutto il traffico a esclusione 
   della posta elettronica. </font></P>
 <P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif"><strong><em>access-list 
   102 permit tcp 172.16.3.0 0.0.0.255 any eq 25 (o eq smtp)</em></strong><BR>
-  (access-list 102 deny any any– implicito, non visibile nella lista)</font></P>
+  (access-list 102 deny any anyâ€“ implicito, non visibile nella lista)</font></P>
 <P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif"><strong><em>interface 
   ethernet 0<BR>
   ip access-group 102 out</em></strong></font></P>
@@ -282,37 +282,37 @@
   pratico: usare le ACL come Firewall</U></B></font></P>
 <P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Le 
   ACL, tra gli altri tipi di utilizzo, possono essere adottate per aumentare la 
-  sicurezza della rete dagli attacchi provenienti dall’esterno (internet). Questo 
+  sicurezza della rete dagli attacchi provenienti dallâ€™esterno (internet). Questo 
   tipo di configurazione si ottiene configurando opportunamente il <I>border router</I> 
-  ovvero il router connesso verso l’esterno. In questo caso, appunto, il router 
-  avrà anche funzione di firewall. </font></P>
+  ovvero il router connesso verso lâ€™esterno. In questo caso, appunto, il router 
+  avrÃ  anche funzione di firewall. </font></P>
 <P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Un 
   esempio di tale architettura potrebbe essere il seguente (figura n. 3):</font></P>
 <p align="center"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif"><img src="../cisco827_file/aclEstese03.gif" width="450" height="203"></font></p>
 <p align="center"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif"><strong>Figura 
   3</strong></font></p>
 <P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">In 
-  questa rete si può pensare, con l’utilizzo delle ACL, di forzare tutto il traffico 
-  proveniente da Internet verso l’<I>application gateway,</I> mentre il router 
-  connesso alla LAN interna accetterà solo i pacchetti provenienti da quest’ultimo.</font></P>
+  questa rete si puÃ² pensare, con lâ€™utilizzo delle ACL, di forzare tutto il traffico 
+  proveniente da Internet verso lâ€™<I>application gateway,</I> mentre il router 
+  connesso alla LAN interna accetterÃ  solo i pacchetti provenienti da questâ€™ultimo.</font></P>
 <P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Bisogna 
-  comunque evidenziare che l’utilizzo delle ACL come <a href="../glossario_htm/glossario.html#firewall">firewall</a>, 
+  comunque evidenziare che lâ€™utilizzo delle ACL come <a href="../glossario_htm/glossario.html#firewall">firewall</a>, 
   sebbene forniscano un livello base di sicurezza, non offrono in alcun modo tutti 
-  i vantaggi, la flessibilità e il livello di sicurezza di un “<I>classico” </I>&nbsp;<a href="../glossario_htm/glossario.html#firewall">firewall</a> 
+  i vantaggi, la flessibilitÃ  e il livello di sicurezza di un â€œ<I>classicoâ€ </I>&nbsp;<a href="../glossario_htm/glossario.html#firewall">firewall</a> 
   (hardware o software che sia).</font></P>
 <P align="justify">&nbsp;</P>
 <P align="center"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif"><B><U>Verificare 
   le ACL</U></B></font></P>
 <P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Per 
   visualizzare le informazioni sulle ACL si possono utilizzare i seguenti comandi:</font></P>
-<P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">–&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+<P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">â€“&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
   Router&gt; <B>show</B> <B>access-list </B>[<I>access-list number</I>]: mostra 
-  il contenuto di tutte le ACL caricate sul router (utilizzando l’opzione <I>access-list 
+  il contenuto di tutte le ACL caricate sul router (utilizzando lâ€™opzione <I>access-list 
   number</I> vengono elencate solo le condizioni di una determinata ACL);</font></P>
-<P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">–&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+<P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">â€“&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
   Router&gt; <B>show</B> <B>ip interface</B> [<I>interface-type number</I>] : 
-  mostra le informazioni sulle interfacce IP e quindi anche la presenza di un’eventuale 
-  ACL collegata all’interfaccia (le opzioni <I>interface-type</I> e <I>number</I> 
+  mostra le informazioni sulle interfacce IP e quindi anche la presenza di unâ€™eventuale 
+  ACL collegata allâ€™interfaccia (le opzioni <I>interface-type</I> e <I>number</I> 
   permettono di indicare una determinata interfaccia).</font></P>
 <P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif"><I>ESEMPIO</I></font></P>
 <P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Router#<B>show</B> 
@@ -350,23 +350,23 @@
       bene lo scopo che si vuole ottenere con le ACL; </font></P>
   <LI> 
     <P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Inserire 
-      le clausole più restrittive e quelle più utilizzate all’inizio; </font></P>
+      le clausole piÃ¹ restrittive e quelle piÃ¹ utilizzate allâ€™inizio; </font></P>
   <LI> 
     <P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Posizionare 
-      le <a href="cisco827_acl_std.html">ACL Standard</a> più vicino al destinatario; 
+      le <a href="cisco827_acl_std.html">ACL Standard</a> piÃ¹ vicino al destinatario; 
       </font></P>
   <LI> 
     <P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Posizionare 
-      le ACL Estese più vicino al mittente; </font></P>
+      le ACL Estese piÃ¹ vicino al mittente; </font></P>
   <LI> 
-    <P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Poiché 
-      non è possibile cambiare l’ordine in cui vengono inserite le varie condizioni 
-      di un’ACL, può essere opportuno scriverle con un editor di testo e poi esportarle 
-      sul router, avendo cura di salvarne una copia. Questo è utile anche in caso 
+    <P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">PoichÃ© 
+      non Ã¨ possibile cambiare lâ€™ordine in cui vengono inserite le varie condizioni 
+      di unâ€™ACL, puÃ² essere opportuno scriverle con un editor di testo e poi esportarle 
+      sul router, avendo cura di salvarne una copia. Questo Ã¨ utile anche in caso 
       di future modifiche. </font></P>
   <LI> 
     <P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Ricordare 
-      che le ACL, in ogni caso, richiedono l’utilizzo di risorse aggiuntive al 
+      che le ACL, in ogni caso, richiedono lâ€™utilizzo di risorse aggiuntive al 
       processore del router.</font></P>
   </LI>
 </UL>
