--- a/networking/Cisco/cisco827_htm/cisco827_acl_std.html
+++ b/networking/Cisco/cisco827_htm/cisco827_acl_std.html
@@ -3,7 +3,7 @@
 <!-- Mirrored from www.di-srv.unisa.it/~ads/corso-security/www/CORSO-0203/Cisco/cisco827_htm/cisco827_acl_std.htm by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 08 Oct 2019 08:59:33 GMT -->
 <head>
 <title>Access List standard</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+ <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
 
 <body bgcolor="#FFFFFF" text="#000000" background="../sfondo.jpg">
@@ -48,11 +48,11 @@
 <p align="justify">&nbsp;</p>
 <p align="justify">&nbsp;</p>
 <P align="center"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif"><B><U>Posizionamento 
-  di un’ACL</U></B></font></P>
+  di unâ€™ACL</U></B></font></P>
 <P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Uno 
-  degli aspetti fondamentali da ricordare è il posizionamento delle ACL. Questo 
-  è di non secondaria importanza, in quanto un cattivo posizionamento delle ACL 
-  può aver un impatto negativo sulla rete:</font></P>
+  degli aspetti fondamentali da ricordare Ã¨ il posizionamento delle ACL. Questo 
+  Ã¨ di non secondaria importanza, in quanto un cattivo posizionamento delle ACL 
+  puÃ² aver un impatto negativo sulla rete:</font></P>
 <P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">- 
   maggiori risorse utilizzate dal router nel processare i pacchetti; </font></P>
 <P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">- 
@@ -61,21 +61,21 @@
   collasso della rete stessa.</font></P>
 <P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;Due 
   sono gli aspetti fondamentali da tenere in considerazione nel posizionamento 
-  di un’ACL:</font></P>
+  di unâ€™ACL:</font></P>
 <OL type=1>
   <LI> 
     <P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">I 
       pacchetti scartati non andranno a utilizzare risorse della rete; </font></P>
   <LI> 
     <P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Processare 
-      le ACL richiede risorse aggiuntive per il router (questo è anche uno dei 
+      le ACL richiede risorse aggiuntive per il router (questo Ã¨ anche uno dei 
       motivi per cui non bisogna abusare delle ACL, specie in presenza di processori 
       poco potenti). </font></P>
   </LI>
 </OL>
 <P align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Cisco 
-  consiglia, a riguardo, di posizionare le ACL standard più vicino alla destinazione 
-  e le <a href="cisco827_acl_est.html">ACL Estese</a> più vicino alla sorgente.</font></P>
+  consiglia, a riguardo, di posizionare le ACL standard piÃ¹ vicino alla destinazione 
+  e le <a href="cisco827_acl_est.html">ACL Estese</a> piÃ¹ vicino alla sorgente.</font></P>
 <p align="justify">&nbsp;</p>
 <p align="justify">&nbsp;</p>
 <P align="center"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif"><B><U>Configurazione 
@@ -208,12 +208,12 @@
     <TR> 
       <TD class=Normal vAlign=top width=139> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Permit</font></P></TD>
       <TD class=Normal vAlign=top width=513> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Permette 
-          l’accesso se le condizioni sono soddisfatte</font></P></TD>
+          lâ€™accesso se le condizioni sono soddisfatte</font></P></TD>
     </TR>
     <TR> 
       <TD class=Normal vAlign=top width=139> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Deny</font></P></TD>
       <TD class=Normal vAlign=top width=513> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Nega 
-          l’accesso se le condizioni sono soddisfatte</font></P></TD>
+          lâ€™accesso se le condizioni sono soddisfatte</font></P></TD>
     </TR>
     <TR> 
       <TD class=Normal vAlign=top width=139> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Source</font></P></TD>
@@ -224,13 +224,13 @@
       <TD class=Normal vAlign=top width=139> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Souce 
           wildcard</font></P></TD>
       <TD class=Normal vAlign=top width=513> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">(Optional) 
-          La wildcard mask che deve essere applicata all’indirizzo sorgente</font></P></TD>
+          La wildcard mask che deve essere applicata allâ€™indirizzo sorgente</font></P></TD>
     </TR>
     <TR> 
       <TD class=Normal vAlign=top width=139> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Log</font></P></TD>
       <TD class=Normal vAlign=top width=513> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">(Optional) 
-          Attiva i messaggi di log. Questi comprendono l’indirizzo sorgente, il 
-          numero di pacchetti e l’esito del controllo (permit o deny). I log vengono 
+          Attiva i messaggi di log. Questi comprendono lâ€™indirizzo sorgente, il 
+          numero di pacchetti e lâ€™esito del controllo (permit o deny). I log vengono 
           generati a intervalli di 5 minuti.</font></P></TD>
     </TR>
   </TBODY>
@@ -256,15 +256,15 @@
     <TR> 
       <TD class=Normal vAlign=top width=139> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Access-list-number</font></P></TD>
       <TD class=Normal vAlign=top width=513> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Indica 
-          il numero della ACL che deve essere legata all’interfaccia.</font></P></TD>
+          il numero della ACL che deve essere legata allâ€™interfaccia.</font></P></TD>
     </TR>
     <TR> 
       <TD class=Normal vAlign=top width=139> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">In|out</font></P></TD>
       <TD class=Normal vAlign=top width=513> <P><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Specifica 
-          se la ACL va applicata all’interfaccia in entrata o in uscita. Una ACL 
-          in input fa sì che il router applichi prima la ACL e poi effettui il 
-          routine, mentre in output prima il routine e poi la ACL. Se non è specificato, 
-          per default è out.</font></P></TD>
+          se la ACL va applicata allâ€™interfaccia in entrata o in uscita. Una ACL 
+          in input fa sÃ¬ che il router applichi prima la ACL e poi effettui il 
+          routine, mentre in output prima il routine e poi la ACL. Se non Ã¨ specificato, 
+          per default Ã¨ out.</font></P></TD>
     </TR>
   </TBODY>
 </TABLE>
