--- a/networking/Cisco/cisco827_htm/cisco827_pass_rec.html
+++ b/networking/Cisco/cisco827_htm/cisco827_pass_rec.html
@@ -3,8 +3,8 @@
 <!-- Mirrored from www.di-srv.unisa.it/~ads/corso-security/www/CORSO-0203/Cisco/cisco827_htm/cisco827_pass_rec.htm by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 08 Oct 2019 08:59:40 GMT -->
 <head>
 <title>Password recovery</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-</head>
+ <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+  </head>
 
 <body bgcolor="#FFFFFF" text="#000000" background="../sfondo.jpg">
 <h1 align="left"><font face="Verdana, Arial, Helvetica, sans-serif"><em>PASSWORD 
@@ -126,10 +126,10 @@
   Per modificare il registro di configurazione, digitare &quot;<em><strong>config-register&nbsp; 
   0x2142</strong></em>&quot; e premere Invio.<BR>
   6) Digitare <em><strong>i</strong></em> e premere Invio.</font></P>
-<P class=normal align=justify><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Apparirà 
-  il tipico System bootstrap che ci porterà alla "System configuration dialog", 
-  una mascherà interattiva che ci chiederà se vogliamo configurare ex-novo il router. 
-  A questa domanda risponderemo NO (comando <em><strong>n</strong></em>), e apparirà 
+<P class=normal align=justify><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">ApparirÃ  
+  il tipico System bootstrap che ci porterÃ  alla "System configuration dialog", 
+  una mascherÃ  interattiva che ci chiederÃ  se vogliamo configurare ex-novo il router. 
+  A questa domanda risponderemo NO (comando <em><strong>n</strong></em>), e apparirÃ  
   un nuovo prompt: </font></P>
 <TABLE width="73%" border=1 align="center" cellPadding=0 cellSpacing=0 
                   borderColor=#111111 
@@ -151,16 +151,16 @@
 </TABLE>
 <p>&nbsp;</p>
 <P class=normal align=justify><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">7) 
-  Digitare &quot;<em><strong>ena</strong></em>&quot; per passare alla modalità 
-  privilegiata. Ovviamente non ci verrà richiesta la password perchè il sistema 
-  è privo di configurazione. (Questa situazione può esserre analizzata con il 
+  Digitare &quot;<em><strong>ena</strong></em>&quot; per passare alla modalitÃ  
+  privilegiata. Ovviamente non ci verrÃ  richiesta la password perchÃ¨ il sistema 
+  Ã¨ privo di configurazione. (Questa situazione puÃ² esserre analizzata con il 
   comando &quot;<strong><em>sh run</em></strong>&quot;)<BR>
   8) A questo punto possiamo decidere di copiare la configurazione presente in 
   <a href="../cisco_htm/cisco_comp_princ.html#flash">Flash</a> e rendere operativo 
   il router e, OVVIAMENTE cambiare la password:<BR>
   a) &quot;<em><strong>copy startup-config running-config</strong></em>&quot; 
   o &quot;<em><strong>copy start run</strong></em>&quot;<FONT color=#ff0000><BR>
-  </FONT>b) passare in modalità di configurazione con il comando<FONT color=#ff0000> 
+  </FONT>b) passare in modalitÃ  di configurazione con il comando<FONT color=#ff0000> 
   </FONT>&quot;<em><strong>config t</strong></em>&quot;<FONT color=#ff0000><BR>
   </FONT>c) digitare &quot;<em><strong>enable secret nuovapassword</strong></em>&quot;</font></P>
 <P class=normal align=justify><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">9) 
