--- a/networking/Cisco/cisco_htm/cisco_intro.html
+++ b/networking/Cisco/cisco_htm/cisco_intro.html
@@ -3,7 +3,7 @@
 <!-- Mirrored from www.di-srv.unisa.it/~ads/corso-security/www/CORSO-0203/Cisco/cisco_htm/cisco_intro.htm by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 08 Oct 2019 08:59:15 GMT -->
 <head>
 <title>Cisco Systems</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+ <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
 
 <body bgcolor="#FFFFFF" text="#000000" background="../sfondo.jpg">
@@ -39,7 +39,7 @@
   delle tematiche sulla rete: il team degli esperti Cisco ha progettato e realizzato 
   la rete Internet fin dai suoi esordi.</font></p>
 <p align="justify"><font size="-1" face="Verdana, Arial, Helvetica, sans-serif">Cisco 
-  Systems è presente in Italia dal 1994, partecipa attivamente allo sviluppo tecnologico 
+  Systems Ã¨ presente in Italia dal 1994, partecipa attivamente allo sviluppo tecnologico 
   del nostro Paese non soltanto affiancando le principali aziende (carrier, service 
   provider, grandi e piccole/medie imprese) nella messa a punto delle loro infrastrutture 
   di rete, ma anche investendo nella formazione di figure professionali in grado 
