Aggiunte immagini di sfondo e cambiati i colori

--- a/index.html
+++ b/index.html
@@ -6,9 +6,34 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/stile_index.css">
   <meta charset="utf-8" />
+  
+  <style>
+	
+		#sfondo{
+			background-image:url('sfondo.jpg');
+			background-repeat:no-repeat;
+			background-size: 100%;
+		
+		}
+		
+		small{
+			color:white;
+			position: fixed;
+			width: 50%;
+			bottom: 10px;
+		}
+		
+		h2,p,h1{
+			color: white;
+		}
+	
+	
+	</style>
+  
+  
 </head>
 
-<body>
+<body id='sfondo'>
 
   <div class="topnav" id="myTopnav">
     <!--Questo è il menu responsive-->
@@ -25,6 +50,7 @@
   <div style="padding-left:16px">
     <!--Scritte sotto il menu qua nella pagina principale-->
     <h2>Qualcosa</h2>
+	
   </div>
 
   <!--Funzioni Javascript-->
@@ -39,7 +65,7 @@
     }
   </script>
 
-
+<small >Copyright 2019. All rights reserved</small>
 
 </body>
 
