--- a/networking/index.html
+++ b/networking/index.html
@@ -7,9 +7,33 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="../css/stile_networking.css">
 	<link rel="canonical" href="index.html" />
+	
+	<style>
+	
+		#sfondo{
+			background-image:url('sfondo.jpg');
+			background-repeat:no-repeat;
+			background-size: 100%;
+		
+		}
+		
+		small{
+			color:white;
+			position: fixed;
+			width: 50%;
+			bottom: 10px;
+		}
+	
+	
+	</style>
+	
+	
+	
+	
+	
     </head>
-    <body>
-
+    <body id='sfondo'>
+		
       <div class="topnav" id="myTopnav">
         <!--Questo è il menu responsive-->
 			<a href='index.html' class="active">Networking</a>
@@ -27,7 +51,7 @@
 
 
 		
-<small>Copyright 2019. All rights reserved</small>
+<small >Copyright 2019. All rights reserved</small>
 
 <!--Funzioni Javascript-->
 
